--- a/style/container.css
+++ b/style/container.css
@@ -2,6 +2,7 @@
 	background-color: rgb(234, 234, 234);
 	padding-bottom: 100px;
 	margin-top: 20px;
+	margin-bottom: 10px;
 	box-shadow: 2px 2px 10px 0;
 }
 
