--- a/style/form.css
+++ b/style/form.css
@@ -1,4 +1,7 @@
 .form{
         box-shadow: 2px 2px 10px 0;
         margin-left: 10px;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        justify-content: center;
 }
