--- a/style/form.css
+++ b/style/form.css
@@ -4,4 +4,7 @@
         margin-top: 100px;
         margin-bottom: 100px;
         justify-content: center;
+        width: 90%;
+        padding-top: 200px;
+        padding-bottom: 200px;
 }
