--- a/style/form.css
+++ b/style/form.css
@@ -1,4 +1,4 @@
-.form{
+MMDOP?PC?.form{
         box-shadow: 2px 2px 10px 0;
         margin-left: 10px;
         margin-top: 100px;
@@ -11,10 +11,7 @@
 }
 
 .formulaire{
-        width: 600px;
+        width: 100%;
+        box-shadow: 2px 2px 10px 0;
+        justify-content: center;
 }
-      <div class="form">
-
-        
-
-      </div>
