--- a/style/form.css
+++ b/style/form.css
@@ -1,16 +1,4 @@
-MMDOP?PC?.form{
-        box-shadow: 2px 2px 10px 0;
-        margin-left: 10px;
-        margin-top: 100px;
-        margin-bottom: 100px;
-        justify-content: center;
-        width: 90%;
-        padding-top: 200px;
-        padding-bottom: 200px;
-
-}
-
-.formulaire{
+footer .formulaire{
         width: 100%;
         box-shadow: 2px 2px 10px 0;
         justify-content: center;
