--- a/style/form.css
+++ b/style/form.css
@@ -1,5 +1,6 @@
 .formulaire{
         width: 100%;
         box-shadow: 2px 2px 10px 0;
-        justify-content: center;
+        align-items: center;
+        margin-bottom: 500px;
 }
