--- a/style/footer.css
+++ b/style/footer.css
@@ -11,9 +11,16 @@ footer{
 	box-shadow: 2px 2px 10px 0;
 }
 
-footer div{
+footer div .foot{
 	padding-right: 100px;
 	padding-left: 80px;
+}
+
+.formulaire{
+        width: 100%;
+        box-shadow: 2px 2px 10px 0;
+        align-items: center;
+        margin-bottom: 500px;
 }
 
 .border{
