--- a/style/container.css
+++ b/style/container.css
@@ -1,7 +1,7 @@
 .container{
 	background-color: rgb(234, 234, 234);
 	padding-bottom: 100px;
-	margin-top: 20px;
+	margin-top: 30px;
 	margin-bottom: 40px;
 	box-shadow: 2px 2px 10px 0;
 }
@@ -32,7 +32,7 @@
 .title-boutons{
 	color: black;
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 100px;
 	padding-right: 30px;
 }
 
@@ -40,6 +40,8 @@
 	display: flex;
 	justify-content: center;
 	justify-content: space-around;
+	margin-top: 20px;
+	margin-bottom: 50px;
 
 }
 
@@ -121,6 +123,7 @@ div{
 	object-fit: contain;
 	padding-top: 20px;
 }
+
 
 .aston-martin{
 	object-fit: contain;
