--- a/style/footer.css
+++ b/style/footer.css
@@ -9,7 +9,8 @@ footer{
 	margin-top: 40px;
 	padding: 60px;
 	box-shadow: 2px 2px 10px 0;
-	height: 10000px;
+	height: 500px;
+	flex-wrap: wrap;
 }
 
 footer div .foot{
