--- a/style/footer.css
+++ b/style/footer.css
@@ -1,4 +1,4 @@
-footer{
+.footer{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -10,7 +10,7 @@ footer{
 	padding: 60px;
 	box-shadow: 2px 2px 10px 0;
 	height: 800px;
-	margin-bottom: 20px;
+	margin-bottom: 100px;
 	flex-wrap: wrap;
 }
 
