--- a/style/container.css
+++ b/style/container.css
@@ -8,7 +8,7 @@
 
 .btn{
 	color: white;
-	background-color: #80404;
+	background-color: #B80404;
 	cursor: pointer;
 	border-radius: 3px;
 	width: 150px;
